--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -1,9 +1,11 @@
 <LinearLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/movie_review_author"
-        android:text="@string/movie_review_author"
+        tools:text="@string/movie_review_author_placeholder"
         android:textStyle="bold"
         android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
@@ -13,7 +15,7 @@
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/movie_review_content"
-        android:text="@string/movie_review_content"
+        tools:text="@string/movie_review_content_placeholder"
         android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
         android:paddingTop="4dp"
